[package]
name = "arrow_deps"
version = "0.1.0"
authors = ["alamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Apache Arrow / Parquet / DataFusion dependencies for InfluxDB IOx, to ensure consistent versions and unified updates"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We are using development version of arrow/parquet/datafusion and the dependencies are at the same rev

# The version can be found here: https://github.com/apache/arrow/commit/e7ce8cfda3a612cd54fa47d06e26ca07b83a7cd6
#
arrow = { path = "../../arrow/rust/arrow" , features = ["simd"] }
datafusion = { path = "../../arrow/rust/datafusion" }
# Turn off the "arrow" feature; it currently has a bug that causes the crate to rebuild every time
# and we're not currently using it anyway
parquet = { path = "../../arrow/rust/parquet", default-features = false, features = ["snap", "brotli", "flate2", "lz4", "zstd"] }
